--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -1,6 +1,11 @@
 {
   "Hello": "Привет",
   "Language": "Язык",
+  "Settings": "Настройки",
+  "Save": "Сохранить",
+  "Cancel": "Отмена",
+  "Name": "Имя",
+  "Secret": "Секрет",
   "preferences": {
     "language": {
       "en": "Английский",
