Refine modules, add ua lang

--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -1,15 +1,8 @@
 {
-  "Hello": "Привет",
   "Language": "Язык",
   "Settings": "Настройки",
   "Save": "Сохранить",
   "Cancel": "Отмена",
   "Name": "Имя",
-  "Secret": "Секрет",
-  "preferences": {
-    "language": {
-      "en": "Английский",
-      "ru": "Русский"
-    }
-  }
+  "Secret": "Секрет"
 }
