--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -1,15 +1,8 @@
 {
-  "Hello": "Hello",
   "Language": "Language",
   "Settings": "Settings",
   "Save": "Save",
   "Cancel": "Cancel",
   "Name": "Name",
-  "Secret": "Secret",
-  "preferences": {
-    "language": {
-      "en": "English",
-      "ru": "Russian"
-    }
-  }
+  "Secret": "Secret"
 }
