Add initial navigation

--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -1,4 +1,7 @@
 {
+  "Home": "Home",
+  "Games": "Games",
+  "About": "About",
   "Language": "Language",
   "Settings": "Settings",
   "Save": "Save",
