--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -1,4 +1,7 @@
 {
+  "Home": "Главная",
+  "Games": "Игры",
+  "About": "О нас",
   "Language": "Язык",
   "Settings": "Настройки",
   "Save": "Сохранить",
