--- a/src/client/assets/i18n/ua.json
+++ b/src/client/assets/i18n/ua.json
@@ -1,4 +1,7 @@
 {
+  "Home": "Головна",
+  "Games": "Ігри",
+  "About": "Про нас",
   "Language": "Мова",
   "Settings": "Налаштування",
   "Save": "Зберегти",
