Update home page

--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -2,6 +2,12 @@
   "Home": "Home",
   "Games": "Games",
   "About": "About",
+  "Welcome to Board Games": "Welcome to Board Games",
+  "Board games introduction": "Play board games online with your friends. Only best games in a single place.",
+  "How to start": "How to start",
+  "Update your player name": "We already generated a cool name for you. You can change it anytime together with other settings by clicking on user icon in the header.",
+  "Find a game or create a new one": "Find a game or create a new one on 'Games' tab.",
+  "Invite your friends to play with you or fight against the AI": "Invite your friends to play with you or fight against the artificial intelligence.",
   "Language": "Language",
   "Settings": "Settings",
   "Save": "Save",
