--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -2,6 +2,12 @@
   "Home": "Главная",
   "Games": "Игры",
   "About": "О нас",
+  "Welcome to Board Games": "Добро пожаловать в Board Games",
+  "Board games introduction": "Играйте в настольные игры онлайн со своими друзьями. Только лучшие игры в одном месте.",
+  "How to start": "Как начать",
+  "Update your player name": "Мы уже создали для вас классное имя. Вы можете изменить его в любое время вместе с другими настройками, щелкнув на значок пользователя в заголовке.",
+  "Find a game or create a new one": "Найдите игру или создайте новую на вкладке 'Игры'.",
+  "Invite your friends to play with you or fight against the AI": "Пригласите своих друзей играть с вами или сражаться против искусственного интеллекта.",
   "Language": "Язык",
   "Settings": "Настройки",
   "Save": "Сохранить",
