--- a/src/client/assets/i18n/ua.json
+++ b/src/client/assets/i18n/ua.json
@@ -2,6 +2,12 @@
   "Home": "Головна",
   "Games": "Ігри",
   "About": "Про нас",
+  "Welcome to Board Games": "Ласкаво просимо до Board Games",
+  "Board games introduction": "Грайте в настільні ігри онлайн з друзями. Тільки найкращі ігри в єдиному місці.",
+  "How to start": "Як почати",
+  "Update your player name": "Ми вже створили круте ім'я для вас. Ви можете змінити його в будь-який час разом з іншими налаштуваннями, натиснувши на значок користувача в заголовку.",
+  "Find a game or create a new one": "Знайдіть гру або створіть нову на вкладці 'Ігри'.",
+  "Invite your friends to play with you or fight against the AI": "Запросіть своїх друзів грати з вами або бийтеся проти штучного інтелекту.",
   "Language": "Мова",
   "Settings": "Налаштування",
   "Save": "Зберегти",
