--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -1,13 +1,15 @@
 {
   "Home": "Home",
   "Games": "Games",
-  "About": "About",
+  "About us": "About us",
   "Welcome to Board Games": "Welcome to Board Games",
   "Board games introduction": "Play board games online with your friends. Only best games in a single place.",
   "How to start": "How to start",
-  "Update your player name": "We already generated a cool name for you. You can change it anytime together with other settings by clicking on user icon in the header.",
+  "Update your player name": "We already generated a cool name for you. You can change it anytime together with other settings by clicking on the user icon in the header.",
   "Find a game or create a new one": "Find a game or create a new one on 'Games' tab.",
   "Invite your friends to play with you or fight against the AI": "Invite your friends to play with you or fight against the artificial intelligence.",
+  "This is onesource": "Board Games is an open source project. Are goal is to create a platform for online board games. Not only for existing games, but any new.",
+  "Feel free to contact us": "Feel free to contact us if you have any questions or you want to support us:",
   "Language": "Language",
   "Settings": "Settings",
   "Save": "Save",
