--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -8,6 +8,8 @@
   "Update your player name": "Мы уже создали для вас классное имя. Вы можете изменить его в любое время вместе с другими настройками, щелкнув на значок пользователя в заголовке.",
   "Find a game or create a new one": "Найдите игру или создайте новую на вкладке 'Игры'.",
   "Invite your friends to play with you or fight against the AI": "Пригласите своих друзей играть с вами или сражаться против искусственного интеллекта.",
+  "This is onesource": "Board Games - проект с открытым исходным кодом. Цель состоит в том, чтобы создать платформу для настольных онлайн игр. Не только для существующих игр, но и для любых новых.",
+  "Feel free to contact us": "Не стесняйтесь обратиться к нам, если у вас есть какие-либо вопросы или вы хотите поддержать нас:",
   "Language": "Язык",
   "Settings": "Настройки",
   "Save": "Сохранить",
