Update games page

--- a/src/client/assets/i18n/ua.json
+++ b/src/client/assets/i18n/ua.json
@@ -8,6 +8,9 @@
   "Update your player name": "Ми вже створили круте ім'я для вас. Ви можете змінити його в будь-який час разом з іншими налаштуваннями, натиснувши на значок користувача в заголовку.",
   "Find a game or create a new one": "Знайдіть гру або створіть нову на вкладці 'Ігри'.",
   "Invite your friends to play with you or fight against the AI": "Запросіть своїх друзів грати з вами або бийтеся проти штучного інтелекту.",
+  "Running games list": "Список активних ігор",
+  "No running games": "Немає активних ігор",
+  "Start a new game": "Почати нову гру",
   "This is onesource": "Board games - це проект з відкритим кодом. Метою є створення платформи для настільних онлайн ігор. Не тільки для існуючих ігор, але і для будь-яких нових.",
   "Feel free to contact us": "Не соромтеся зв'язатися з нами, якщо у вас виникли питання або хочете підтримати нас:",
   "Language": "Мова",
