--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -7,6 +7,9 @@
   "How to start": "How to start",
   "Update your player name": "We already generated a cool name for you. You can change it anytime together with other settings by clicking on the user icon in the header.",
   "Find a game or create a new one": "Find a game or create a new one on 'Games' tab.",
+  "Running games list": "Running games list",
+  "No running games": "No running games",
+  "Start a new game": "Start a new game",
   "Invite your friends to play with you or fight against the AI": "Invite your friends to play with you or fight against the artificial intelligence.",
   "This is onesource": "Board Games is an open source project. Are goal is to create a platform for online board games. Not only for existing games, but any new.",
   "Feel free to contact us": "Feel free to contact us if you have any questions or you want to support us:",
