Improve games list

--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -10,6 +10,10 @@
   "Running games list": "Running games list",
   "No running games": "No running games",
   "Start a new game": "Start a new game",
+  "Test game": "Test game",
+  "Munchkin": "Munchkin",
+  "Join": "Join",
+  "Game type": "Game type",
   "Invite your friends to play with you or fight against the AI": "Invite your friends to play with you or fight against the artificial intelligence.",
   "This is onesource": "Board Games is an open source project. Are goal is to create a platform for online board games. Not only for existing games, but any new.",
   "Feel free to contact us": "Feel free to contact us if you have any questions or you want to support us:",
