--- a/src/client/assets/i18n/ua.json
+++ b/src/client/assets/i18n/ua.json
@@ -11,6 +11,10 @@
   "Running games list": "Список активних ігор",
   "No running games": "Немає активних ігор",
   "Start a new game": "Почати нову гру",
+  "Test game": "Тестова гра",
+  "Munchkin": "Манчкін",
+  "Join": "Приєднатися",
+  "Game type": "Тип гри",
   "This is onesource": "Board games - це проект з відкритим кодом. Метою є створення платформи для настільних онлайн ігор. Не тільки для існуючих ігор, але і для будь-яких нових.",
   "Feel free to contact us": "Не соромтеся зв'язатися з нами, якщо у вас виникли питання або хочете підтримати нас:",
   "Language": "Мова",
