Add ability to add new game

--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -10,6 +10,7 @@
   "Running games list": "Running games list",
   "No running games": "No running games",
   "Start a new game": "Start a new game",
+  "Start": "Start",
   "Test game": "Test game",
   "Munchkin": "Munchkin",
   "Join": "Join",
