--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -10,6 +10,7 @@
   "Running games list": "Список активных игр",
   "No running games": "Нет активных игр",
   "Start a new game": "Начать новую игру",
+  "Start": "Начать",
   "Test game": "Тестовая игра",
   "Munchkin": "Манчкин",
   "Join": "Присоединиться",
