--- a/src/client/assets/i18n/ua.json
+++ b/src/client/assets/i18n/ua.json
@@ -11,6 +11,7 @@
   "Running games list": "Список активних ігор",
   "No running games": "Немає активних ігор",
   "Start a new game": "Почати нову гру",
+  "Start": "Почати",
   "Test game": "Тестова гра",
   "Munchkin": "Манчкін",
   "Join": "Приєднатися",
