--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -16,7 +16,7 @@
   "Join": "Join",
   "Game type": "Game type",
   "Invite your friends to play with you or fight against the AI": "Invite your friends to play with you or fight against the artificial intelligence.",
-  "This is onesource": "Board Games is an open source project. Are goal is to create a platform for online board games. Not only for existing games, but any new.",
+  "This is onesource": "Board Games is an open source project. Our goal is to create a platform for online board games. Not only for existing games, but for any new.",
   "Feel free to contact us": "Feel free to contact us if you have any questions or you want to support us:",
   "Language": "Language",
   "Settings": "Settings",
