Add initial chat component

--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -24,5 +24,7 @@
   "Cancel": "Отмена",
   "Name": "Имя",
   "Password": "Пароль",
-  "Close": "Закрыть"
+  "Close": "Закрыть",
+  "Message": "Сообщение",
+  "Send": "Отправить"
 }
