--- a/src/client/assets/i18n/ua.json
+++ b/src/client/assets/i18n/ua.json
@@ -24,5 +24,7 @@
   "Cancel": "Cкасувати",
   "Name": "Ім'я",
   "Password": "Пароль",
-  "Close": "Закрити"
+  "Close": "Закрити",
+  "Message": "Повідомлення",
+  "Send": "Надіслати"
 }
