--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -24,5 +24,7 @@
   "Cancel": "Cancel",
   "Name": "Name",
   "Password": "Password",
-  "Close": "Close"
+  "Close": "Close",
+  "Message": "Message",
+  "Send": "Send"
 }
