Update games list

--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -26,5 +26,9 @@
   "Password": "Password",
   "Close": "Close",
   "Message": "Message",
-  "Send": "Send"
+  "Send": "Send",
+  "Column game type": "Type",
+  "Column game name": "Name",
+  "Column game players": "Players",
+  "Column game created at": "Created at"
 }
