--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -30,5 +30,9 @@
   "Column game type": "Тип",
   "Column game name": "Название",
   "Column game players": "Игроки",
-  "Column game created at": "Дата создания"
+  "Column game created at": "Дата создания",
+  "Me": "Я",
+  "Level": "Уровень",
+  "Cards in hands": "Карточки в руках",
+  "Cards on table": "Карточки на столе"
 }
