--- a/src/client/assets/i18n/ua.json
+++ b/src/client/assets/i18n/ua.json
@@ -30,5 +30,9 @@
   "Column game type": "Тип",
   "Column game name": "Назва",
   "Column game players": "Гравці",
-  "Column game created at": "Дата створення"
+  "Column game created at": "Дата створення",
+  "Me": "Я",
+  "Level": "Рівень",
+  "Cards in hands": "Картки в руках",
+  "Cards on table": "Картки на столі"
 }
