Add translations extractor

--- a/src/client/assets/i18n/en.json
+++ b/src/client/assets/i18n/en.json
@@ -1,38 +1,38 @@
 {
-  "Home": "Home",
-  "Games": "Games",
-  "About us": "About us",
-  "Welcome to Board Games": "Welcome to Board Games",
-  "Board games introduction": "Play board games online with your friends. Only best games in a single place.",
-  "How to start": "How to start",
-  "Update your player name": "We already generated a cool name for you. You can change it anytime together with other settings by clicking on the user icon in the header.",
-  "Find a game or create a new one": "Find a game or create a new one on 'Games' tab.",
-  "Running games list": "Running games list",
-  "No running games": "No running games",
-  "Start new game": "Start new game",
-  "Start": "Start",
-  "Test game": "Test game",
-  "Munchkin": "Munchkin",
-  "Join": "Join",
-  "Game type": "Game type",
-  "Invite your friends to play with you or fight against the AI": "Invite your friends to play with you or fight against the artificial intelligence.",
-  "This is onesource": "Board Games is an open source project. Our goal is to create a platform for online board games. Not only for existing games, but for any new.",
-  "Feel free to contact us": "Feel free to contact us if you have any questions or you want to support us:",
-  "Language": "Language",
-  "Settings": "Settings",
-  "Save": "Save",
-  "Cancel": "Cancel",
-  "Name": "Name",
-  "Password": "Password",
-  "Close": "Close",
-  "Message": "Message",
-  "Send": "Send",
-  "Column game type": "Type",
-  "Column game name": "Name",
-  "Column game players": "Players",
-  "Column game created at": "Created at",
-  "Me": "Me",
-  "Level": "Level",
-  "Cards in hands": "Cards in hands",
-  "Cards on table": "Cards on table"
+	"About us": "About us",
+	"Board games introduction": "Play board games online with your friends. Only best games in a single place.",
+	"Cancel": "Cancel",
+	"Cards in hands": "Cards in hands",
+	"Cards on table": "Cards on table",
+	"Close": "Close",
+	"Column game created at": "Created at",
+	"Column game name": "Name",
+	"Column game players": "Players",
+	"Column game type": "Type",
+	"Feel free to contact us": "Feel free to contact us if you have any questions or you want to support us:",
+	"Find a game or create a new one": "Find a game or create a new one on 'Games' tab.",
+	"Game type": "Game type",
+	"Games": "Games",
+	"Home": "Home",
+	"How to start": "How to start",
+	"Invite your friends to play with you or fight against the AI": "Invite your friends to play with you or fight against the artificial intelligence.",
+	"Join": "Join",
+	"Language": "Language",
+	"Level": "Level",
+	"Me": "Me",
+	"Message": "Message",
+	"Munchkin": "Munchkin",
+	"Name": "Name",
+	"No running games": "No running games",
+	"Password": "Password",
+	"Running games list": "Running games list",
+	"Save": "Save",
+	"Send": "Send",
+	"Settings": "Settings",
+	"Start": "Start",
+	"Start new game": "Start new game",
+	"Test game": "Test game",
+	"This is onesource": "Board Games is an open source project. Our goal is to create a platform for online board games. Not only for existing games, but for any new.",
+	"Update your player name": "We already generated a cool name for you. You can change it anytime together with other settings by clicking on the user icon in the header.",
+	"Welcome to Board Games": "Welcome to Board Games"
 }
