--- a/src/client/assets/i18n/ru.json
+++ b/src/client/assets/i18n/ru.json
@@ -1,38 +1,38 @@
 {
-  "Home": "Главная",
-  "Games": "Игры",
-  "About": "О нас",
-  "Welcome to Board Games": "Добро пожаловать в Board Games",
-  "Board games introduction": "Играйте в настольные игры онлайн со своими друзьями. Только лучшие игры в одном месте.",
-  "How to start": "Как начать",
-  "Update your player name": "Мы уже создали для вас классное имя. Вы можете изменить его в любое время вместе с другими настройками, щелкнув на значок пользователя в заголовке.",
-  "Find a game or create a new one": "Найдите игру или создайте новую на вкладке 'Игры'.",
-  "Running games list": "Список активных игр",
-  "No running games": "Нет активных игр",
-  "Start new game": "Начать новую игру",
-  "Start": "Начать",
-  "Test game": "Тестовая игра",
-  "Munchkin": "Манчкин",
-  "Join": "Присоединиться",
-  "Game type": "Тип игры",
-  "Invite your friends to play with you or fight against the AI": "Пригласите своих друзей играть с вами или сражаться против искусственного интеллекта.",
-  "This is onesource": "Board Games - проект с открытым исходным кодом. Наша цель состоит в том, чтобы создать платформу для настольных онлайн игр. Не только для существующих игр, но и для любых новых.",
-  "Feel free to contact us": "Не стесняйтесь обратиться к нам, если у вас есть какие-либо вопросы или вы хотите поддержать нас:",
-  "Language": "Язык",
-  "Settings": "Настройки",
-  "Save": "Сохранить",
-  "Cancel": "Отмена",
-  "Name": "Имя",
-  "Password": "Пароль",
-  "Close": "Закрыть",
-  "Message": "Сообщение",
-  "Send": "Отправить",
-  "Column game type": "Тип",
-  "Column game name": "Название",
-  "Column game players": "Игроки",
-  "Column game created at": "Дата создания",
-  "Me": "Я",
-  "Level": "Уровень",
-  "Cards in hands": "Карточки в руках",
-  "Cards on table": "Карточки на столе"
+	"About us": "О нас",
+	"Board games introduction": "Играйте в настольные игры онлайн со своими друзьями. Только лучшие игры в одном месте.",
+	"Cancel": "Отмена",
+	"Cards in hands": "Карточки в руках",
+	"Cards on table": "Карточки на столе",
+	"Close": "Закрыть",
+	"Column game created at": "Дата создания",
+	"Column game name": "Название",
+	"Column game players": "Игроки",
+	"Column game type": "Тип",
+	"Feel free to contact us": "Не стесняйтесь обратиться к нам, если у вас есть какие-либо вопросы или вы хотите поддержать нас:",
+	"Find a game or create a new one": "Найдите игру или создайте новую на вкладке 'Игры'.",
+	"Game type": "Тип игры",
+	"Games": "Игры",
+	"Home": "Главная",
+	"How to start": "Как начать",
+	"Invite your friends to play with you or fight against the AI": "Пригласите своих друзей играть с вами или сражаться против искусственного интеллекта.",
+	"Join": "Присоединиться",
+	"Language": "Язык",
+	"Level": "Уровень",
+	"Me": "Я",
+	"Message": "Сообщение",
+	"Munchkin": "Манчкин",
+	"Name": "Имя",
+	"No running games": "Нет активных игр",
+	"Password": "Пароль",
+	"Running games list": "Список активных игр",
+	"Save": "Сохранить",
+	"Send": "Отправить",
+	"Settings": "Настройки",
+	"Start": "Начать",
+	"Start new game": "Начать новую игру",
+	"Test game": "Тестовая игра",
+	"This is onesource": "Board Games - проект с открытым исходным кодом. Наша цель состоит в том, чтобы создать платформу для настольных онлайн игр. Не только для существующих игр, но и для любых новых.",
+	"Update your player name": "Мы уже создали для вас классное имя. Вы можете изменить его в любое время вместе с другими настройками, щелкнув на значок пользователя в заголовке.",
+	"Welcome to Board Games": "Добро пожаловать в Board Games"
 }
