--- a/src/client/assets/i18n/ua.json
+++ b/src/client/assets/i18n/ua.json
@@ -1,38 +1,38 @@
 {
-  "Home": "Головна",
-  "Games": "Ігри",
-  "About": "Про нас",
-  "Welcome to Board Games": "Ласкаво просимо до Board Games",
-  "Board games introduction": "Грайте в настільні ігри онлайн з друзями. Тільки найкращі ігри в єдиному місці.",
-  "How to start": "Як почати",
-  "Update your player name": "Ми вже створили круте ім'я для вас. Ви можете змінити його в будь-який час разом з іншими налаштуваннями, натиснувши на значок користувача в заголовку.",
-  "Find a game or create a new one": "Знайдіть гру або створіть нову на вкладці 'Ігри'.",
-  "Invite your friends to play with you or fight against the AI": "Запросіть своїх друзів грати з вами або бийтеся проти штучного інтелекту.",
-  "Running games list": "Список активних ігор",
-  "No running games": "Немає активних ігор",
-  "Start new game": "Почати нову гру",
-  "Start": "Почати",
-  "Test game": "Тестова гра",
-  "Munchkin": "Манчкін",
-  "Join": "Приєднатися",
-  "Game type": "Тип гри",
-  "This is onesource": "Board games - це проект з відкритим кодом. Нашою метою є створення платформи для настільних онлайн ігор. Не тільки для існуючих ігор, але і для будь-яких нових.",
-  "Feel free to contact us": "Не соромтеся зв'язатися з нами, якщо у вас виникли питання або хочете підтримати нас:",
-  "Language": "Мова",
-  "Settings": "Налаштування",
-  "Save": "Зберегти",
-  "Cancel": "Cкасувати",
-  "Name": "Ім'я",
-  "Password": "Пароль",
-  "Close": "Закрити",
-  "Message": "Повідомлення",
-  "Send": "Надіслати",
-  "Column game type": "Тип",
-  "Column game name": "Назва",
-  "Column game players": "Гравці",
-  "Column game created at": "Дата створення",
-  "Me": "Я",
-  "Level": "Рівень",
-  "Cards in hands": "Картки в руках",
-  "Cards on table": "Картки на столі"
+	"About us": "Про нас",
+	"Board games introduction": "Грайте в настільні ігри онлайн з друзями. Тільки найкращі ігри в єдиному місці.",
+	"Cancel": "Cкасувати",
+	"Cards in hands": "Картки в руках",
+	"Cards on table": "Картки на столі",
+	"Close": "Закрити",
+	"Column game created at": "Дата створення",
+	"Column game name": "Назва",
+	"Column game players": "Гравці",
+	"Column game type": "Тип",
+	"Feel free to contact us": "Не соромтеся зв'язатися з нами, якщо у вас виникли питання або хочете підтримати нас:",
+	"Find a game or create a new one": "Знайдіть гру або створіть нову на вкладці 'Ігри'.",
+	"Game type": "Тип гри",
+	"Games": "Ігри",
+	"Home": "Головна",
+	"How to start": "Як почати",
+	"Invite your friends to play with you or fight against the AI": "Запросіть своїх друзів грати з вами або бийтеся проти штучного інтелекту.",
+	"Join": "Приєднатися",
+	"Language": "Мова",
+	"Level": "Рівень",
+	"Me": "Я",
+	"Message": "Повідомлення",
+	"Munchkin": "Манчкін",
+	"Name": "Ім'я",
+	"No running games": "Немає активних ігор",
+	"Password": "Пароль",
+	"Running games list": "Список активних ігор",
+	"Save": "Зберегти",
+	"Send": "Надіслати",
+	"Settings": "Налаштування",
+	"Start": "Почати",
+	"Start new game": "Почати нову гру",
+	"Test game": "Тестова гра",
+	"This is onesource": "Board games - це проект з відкритим кодом. Нашою метою є створення платформи для настільних онлайн ігор. Не тільки для існуючих ігор, але і для будь-яких нових.",
+	"Update your player name": "Ми вже створили круте ім'я для вас. Ви можете змінити його в будь-який час разом з іншими налаштуваннями, натиснувши на значок користувача в заголовку.",
+	"Welcome to Board Games": "Ласкаво просимо до Board Games"
 }
